--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -65,3 +65,4 @@
     <p class="footer__copyright">© 2022 - IceCream. All Rights Reserved.</p>
   </div>
 </footer>
+<div class="footer__line"></div>
