--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -40,6 +40,7 @@
     font-weight: 700;
     letter-spacing: 0.4;
     width: 232px;
+    margin-bottom: 16px;
 
     @media screen and (min-width: 768px) {
       width: 352px;
@@ -168,7 +169,7 @@
     font-weight: 700;
     letter-spacing: 0.28px;
     text-align: center;
-    margin: 0 auto;
+    margin-bottom: 24px;
 
     @media screen and (min-width: 768px) {
       margin-top: 12px;
