--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,8 +3,10 @@
     <h1 class="hero__title">ice cream made with passion</h1>
 
     <menu class="hero__menu">
-      <li class="hero__products"><a>Products</a></li>
-      <li class="hero__how-made"><a> How it&apos;s made?</a></li>
+      <li class="hero__products"><a href="#products" class="hero__products-link">Products</a></li>
+      <li class="hero__how-made">
+        <a class="hero__about-link" href="#about"> How it&apos;s made?</a>
+      </li>
     </menu>
     <aside class="hero__aside">
       <div class="hero__aside-item">
@@ -19,6 +21,7 @@
   </div>
   <div class="hero__img-group">
     <img
+      alt="Talerz z wyłożonymi kolorowymi gałkami lodów"
       class="hero__plate-img"
       src="./images/header/plate-tablet-152.png"
       srcset="
@@ -39,6 +42,7 @@
     </p>
 
     <img
+      alt="Wafelek z kolorowymi, uśmiechniętymi gałkami lodów."
       class="hero__main-img"
       src="./images/header/mobile-177.png"
       srcset="
@@ -58,6 +62,10 @@
       <use href="./images/icons-ice_cream.svg#icon-kropki-tablet"></use>
     </svg>
 
-    <img class="hero__dots-desktop" src="./images/header/kropki-desktop.png" />
+    <img
+      class="hero__dots-desktop"
+      src="./images/header/kropki-desktop.png"
+      alt="To tylko dekoracyjne żółte kropki"
+    />
   </div>
 </section>
