--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -75,6 +75,9 @@
       color: $textWhite;
       font-size: 16px;
       font-weight: 700;
+      padding: 0px;
+      margin: 0px;
+      padding-bottom: 13px;
     }
   }
 
@@ -262,6 +265,7 @@
   cursor: not-allowed;
   transform: scale(1);
   background-color: #0a0a0a6a;
+  overflow: hidden;
 }
 
 .buy {
@@ -429,6 +433,10 @@
     border: 1px solid #84a178;
     background: rgba(248, 210, 78, 0.1);
     margin-bottom: 12px;
+
+    &:not(:placeholder-shown):required:not(:valid) {
+      border-color: #8d0a0a;
+    }
 
     @include tablet {
       width: 368px;
