--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -78,13 +78,16 @@ ul {
     font-style: normal;
     font-weight: 400;
     line-height: 176%;
+    margin-bottom: 81px;
     @include tablet {
       font-size: 14px;
       line-height: 174%;
+      margin-bottom: 204px;
     }
     @include desktop {
       font-size: 16px;
       letter-spacing: 0.32px;
+      margin-bottom: 178px;
     }
   }
   &__element {
