changed image sizes

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -95,7 +95,7 @@
         <div class="milkshakes">
           <picture>
             <img
-              class="milkshakes_img"
+              class="milkshakes__img"
               alt="milkshake"
               src="./images/products/milkshakes_mobile@1x.png"
             />
