--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -1,22 +1,35 @@
 @import '../mixins';
 @import './vars';
 
+.conteiner {
+  background-color: $firstBrandColor;
+  padding-right: calc((100% - 280px) / 2);
+  padding-left: calc((100% - 280px) / 2);
+
+  @include mobile {
+    padding-right: calc((100% - 440px) / 2);
+    padding-left: calc((100% - 440px) / 2);
+  }
+
+  @include tablet {
+    padding-right: calc((100% - 704px) / 2);
+    padding-left: calc((100% - 704px) / 2);
+  }
+
+  @include desktop {
+    padding-right: calc((100% - 1168px) / 2);
+    padding-left: calc((100% - 1168px) / 2);
+  }
+}
+
 .header {
   background-color: $firstBrandColor;
   display: flex;
   justify-content: space-between;
-  padding-left: 20px;
-  padding-right: 20px;
+
   padding-top: 20px;
 
-  @include tablet {
-    padding-right: 32px;
-    padding-left: 32px;
-  }
-
   @include desktop {
-    padding-right: 16px;
-    padding-left: 16px;
     padding-top: 8px;
   }
 
@@ -54,9 +67,11 @@
   }
 
   &__wrapper {
-    display: flex;
-    gap: 32px;
-    align-items: end;
+    @include tablet {
+      display: flex;
+      gap: 32px;
+      align-items: end;
+    }
 
     @include desktop {
       gap: 205px;
