--- a/src/sass/partials/_hero.scss
+++ b/src/sass/partials/_hero.scss
@@ -6,8 +6,8 @@
 
   &__box {
     padding-top: 50px;
-    padding-right: 20px;
-    padding-left: 20px;
+    padding-right: calc((100% - 280px) / 2);
+    padding-left: calc((100% - 280px) / 2);
 
     @include mobile {
       padding-top: 40px;
