gallery hope last corrections

--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -1,7 +1,7 @@
 @import '../mixins';
 
 .container {
-  max-width: 380px;
+  max-width: 480px;
   width: 100%;
   height: auto;
   margin: 0 auto;
@@ -51,22 +51,25 @@
 .loop {
   --time: 8s;
   display: grid;
-  margin: 0 auto;
-  //padding-bottom: 80px;
+  margin: 0 auto;  
   justify-items: center;
   place-content: center;
 
   &__image {
-    padding-left: 20px;
-    padding-right: 20px;
+    //display: flex;
+    //justify-content: center;
+    //align-items: center;
+    //padding-left: 20px;
+    //padding-right: 20px;
     border-radius: 8px;
     border: hidden;
     margin: 0 auto;
     margin-top: -39px;
     width: 100%;
     height: auto;
-    min-width: 380px;
-    max-width: 767px;
+    //min-width: 380px;
+   
+    max-width: 767px;    
     padding-bottom: 119px;
 
     @include tablet {
