added some new diamentions

--- a/src/sass/partials/_contacts.scss
+++ b/src/sass/partials/_contacts.scss
@@ -102,7 +102,7 @@
   }
   &__item {
     width: 280px;
-    height: 412px;
+    height: auto;
     border-radius: 24px;
     background-color: #fcfcfc;
     padding: 40px 32px;
@@ -110,13 +110,13 @@
 
     @include tablet {
       width: 224px;
-      height: 537px;
+      height: auto;
       padding: 40px 24px;
     }
     @include desktop {
       width: 368px;
-      height: 542px;
-      padding: 40px 40px;
+      height: auto;
+      padding: 40px 32px;
     }
   }
   &__opening {
@@ -132,12 +132,15 @@
     border: 0.4 solid #e1e1e1;
     margin-bottom: 24px;
     text-align: left;
+    margin-top: 24px;
 
     @include tablet {
+      margin-top: 32px;
       margin-bottom: 32px;
     }
     @include desktop {
       margin-bottom: 32px;
+      margin-top: 32px;
     }
   }
   &__days {
@@ -189,15 +192,11 @@
 .address {
   width: auto;
   height: 70px;
-  margin-bottom: 24px;
 
   @include tablet {
-    margin-bottom: 32px;
     height: 71px;
   }
   @include desktop {
-    margin-bottom: 32px;
-
     height: 50px;
   }
   &__header {
@@ -211,16 +210,19 @@
     font-family: 'Montserrat', sans-serif;
     color: #d6936d;
     text-decoration: none;
+
     @include tablet {
       font-size: 14px;
       line-height: 1.83;
       letter-spacing: 0.04em;
       font-weight: 500;
+      margin-bottom: 32px;
     }
     @include desktop {
       font-size: 16px;
       letter-spacing: 0.04em;
       line-height: 1.83;
+      margin-bottom: 32px;
     }
   }
 }
