Added padings in input and textarea

--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -448,7 +448,7 @@
     border: 1px solid #84a178;
     background: rgba(248, 210, 78, 0.1);
     margin-bottom: 12px;
-
+    padding: 11px 16px;
     &:not(:placeholder-shown):required:not(:valid) {
       border-color: #8d0a0a;
     }
@@ -467,6 +467,8 @@
     height: 65px;
     border-radius: 10px;
     margin-bottom: 26px;
+    padding: 11px 16px;
+    resize: none;
 
     @include tablet {
       width: 368px;
