--- a/src/sass/partials/_gallery.scss
+++ b/src/sass/partials/_gallery.scss
@@ -51,7 +51,7 @@
 .loop {
   --time: 8s;
   display: grid;
-  margin: 0 auto;  
+  margin: 0 auto;
   justify-items: center;
   place-content: center;
 
@@ -68,8 +68,8 @@
     width: 100%;
     height: auto;
     //min-width: 380px;
-   
-    max-width: 767px;    
+
+    max-width: 767px;
     padding-bottom: 119px;
 
     @include tablet {
@@ -129,12 +129,14 @@
   justify-content: center;
   margin: 0 auto;
   max-width: 600px;
+  margin-bottom: 20px;
   //max-height: 300px;
 
   @include tablet {
     max-width: 705px;
     height: auto;
     margin: 0 auto;
+    margin-bottom: -100px;
   }
 
   @include desktop {
@@ -144,7 +146,14 @@
   }
 
   &-pagination {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
     width: 72px;
+    gap: 18px;
+
+    margin-bottom: -8px;
 
     &-bullet {
       width: 12px;
@@ -253,6 +262,7 @@
 
     @include desktop {
       font-size: 16px;
+      margin-bottom: 32px;
     }
   }
 }
