--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -4,21 +4,20 @@ ul {
 .advantages {
   background-color: #84a178;
   color: #fcfcfc;
-  padding-top: 50px;
+  padding-top: 60px;
   padding-bottom: 68px;
   display: block;
 }
 .advantages-container {
   max-width: calc(100vw - 40px);
-  margin: 0 auto 0;
   @include tablet {
     max-width: calc(100vw - 63px);
     margin: 0 auto 0;
   }
   @include desktop {
-    max-width: 1168px;
-    margin: 0 auto 0;
-    padding: 0;
+    max-width: 1200px;
+    padding-top: 60px;
+    padding-bottom: 80px;
   }
 }
 .advantages-header:not(:focus):not(:active) {
@@ -51,9 +50,6 @@ ul {
     color: #fcfcfc;
     text-align: center;
     font-size: 36px;
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 700;
     line-height: normal;
     letter-spacing: 1.44px;
     text-transform: uppercase;
