--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <div class="footer__container">
+    <!--<div class="footer__container">-->
       <div class="footer__title">
         <p class="footer__label">homemade ice cream made</p>
         <p class="footer__heading">with passion</p>
