--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -1,3 +1,5 @@
+@import '../mixins';
+
 .footer {
   background-color: #84a278;
   padding-bottom: 20px;
@@ -19,19 +21,19 @@
     padding-bottom: 0;
   }
 
-  &__container {
-    padding-bottom: 40px;
+  //&__container {
+  //padding-bottom: 40px;
 
-    @media screen and (min-width: 768px) {
-      margin-bottom: 38px;
-      justify-content: space-around;
-    }
-    @media screen and (min-width: 1200px) {
-      margin-bottom: 40px;
-      display: flex;
-      justify-content: space-between;
-    }
-  }
+  //@media screen and (min-width: 768px) {
+  //margin-bottom: 38px;
+  //justify-content: space-around;
+  //}
+  //@media screen and (min-width: 1200px) {
+  // margin-bottom: 40px;
+  // display: flex;
+  //justify-content: space-between;
+  //}
+  //}
   &__social {
     display: flex;
     flex-direction: column;
@@ -162,6 +164,7 @@
     text-decoration: none;
     text-align: right;
     font-size: 12px;
+    padding-bottom: 40px;
   }
   &__contact-link {
     color: #fcfcfc;
