--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -75,6 +75,7 @@
     text-align: left;
     flex-direction: column;
     max-width: 200px;
+    padding-bottom: 60px;
 
     @media screen and (min-width: 768px) {
       display: flex;
