--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -209,6 +209,10 @@
     }
     @include desktop {
       max-width: 1200px;
+      display: flex;
+
+      justify-content: space-between;
+      align-items: flex-start;
     }
   }
 }
