--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -203,21 +203,21 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 15px;
-  @include mobile {
-    max-width: 480px;
-    @include tablet {
-      max-width: 768px;
-      display: flex;
+  //@include mobile {
+  //max-width: 480px;
+  //@include tablet {
+  //max-width: 768px;
+  //display: flex;
 
-      justify-content: space-between;
-      align-items: flex-start;
-    }
-    @include desktop {
-      max-width: 1200px;
-      display: flex;
+  // justify-content: space-between;
+  //align-items: flex-start;
+  //}
+  //@include desktop {
+  //max-width: 1200px;
+  //display: flex;
 
-      justify-content: space-between;
-      align-items: flex-start;
-    }
-  }
+  //justify-content: space-between;
+  //align-items: flex-start;
+  //}
+  //}
 }
