--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -1,9 +1,9 @@
 @import '../mixins';
 @import './vars';
-* {
-  margin: 0;
-  padding: 0;
-}
+//* {
+//margin: 0;
+//padding: 0;
+//}
 ul {
   list-style: none;
 }
