--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -1,10 +1,10 @@
 @import '../mixins';
 @import './vars';
 
-//.products {
-//margin: 0;
-//padding: 0;
-//}
+.products {
+  margin: 0;
+  padding: 0;
+}
 
 //* {
 //margin: 0;
