--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,7 +2,7 @@
   <div class="advantages-container">
     <h2 class="advantages-header">advantages</h2>
     <ul class="advantages-list">
-      <li class="advantages-list_element">
+      <li class="advantages-list__element">
         <figure>
           <div class="advantages-icon">
             <svg width="36" height="36">
