--- a/src/sass/partials/_advantages.scss
+++ b/src/sass/partials/_advantages.scss
@@ -7,6 +7,7 @@ ul {
   padding-top: 60px;
   padding-bottom: 48px;
   display: block;
+  margin: 0 auto;
 }
 .advantages-container {
   max-width: 480px;
@@ -34,6 +35,8 @@ ul {
   flex-direction: column;
   gap: 28px;
   align-items: center;
+  padding: 0;
+
   @include tablet {
     gap: 32px;
     justify-content: space-around;
