--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <div class="container">
+  <div class="footer__container">
     <!--<div class="footer__container">-->
       <div class="footer__title">
         <p class="footer__label">homemade ice cream made</p>
