--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -23,7 +23,8 @@
   }
 
   @media screen and (min-width: 1200px) {
-    padding-bottom: 0;
+    padding-bottom: 12px;
+    margin-bottom: 0px;
   }
 
   //&__container {
