--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -139,7 +139,7 @@ ul {
     @include desktop {
       width: 246px;
       font-size: 16px;
-      margin-top: 66px;
+      margin-top: 30px;
     }
   }
   &__flex-container {
@@ -162,7 +162,7 @@ ul {
     align-items: flex-end;
     cursor: pointer;
     @include desktop {
-      padding-bottom: 24px;
+      margin-bottom: 64;
     }
   }
 }
